--- a/mapclientplugins/segmentationstitcherstep/qt/segmentationstitcherwidget.ui
+++ b/mapclientplugins/segmentationstitcherstep/qt/segmentationstitcherwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1353</width>
+    <width>1137</width>
     <height>921</height>
    </rect>
   </property>
@@ -116,8 +116,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>377</width>
-               <height>322</height>
+               <width>360</width>
+               <height>292</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -346,12 +346,9 @@
                     </sizepolicy>
                    </property>
                    <property name="text">
-                    <string>Radius, scale:</string>
+                    <string>Radius</string>
                    </property>
                   </widget>
-                 </item>
-                 <item>
-                  <widget class="QLineEdit" name="displayLineGeneralScale_lineEdit"/>
                  </item>
                 </layout>
                </widget>
@@ -387,12 +384,9 @@
                  <item>
                   <widget class="QCheckBox" name="displayIndepNetworksRadius_checkBox">
                    <property name="text">
-                    <string>Radius, scale:</string>
+                    <string>Radius</string>
                    </property>
                   </widget>
-                 </item>
-                 <item>
-                  <widget class="QLineEdit" name="displayIndepNetworksScale_lineEdit"/>
                  </item>
                 </layout>
                </widget>
@@ -434,12 +428,9 @@
                     </sizepolicy>
                    </property>
                    <property name="text">
-                    <string>Radius, scale:</string>
+                    <string>Radius</string>
                    </property>
                   </widget>
-                 </item>
-                 <item>
-                  <widget class="QLineEdit" name="displayNetworkGroup1Scale_lineEdit"/>
                  </item>
                 </layout>
                </widget>
@@ -481,12 +472,9 @@
                     </sizepolicy>
                    </property>
                    <property name="text">
-                    <string>Radius, scale:</string>
+                    <string>Radius</string>
                    </property>
                   </widget>
-                 </item>
-                 <item>
-                  <widget class="QLineEdit" name="displayNetworkGroup2Scale_lineEdit"/>
                  </item>
                 </layout>
                </widget>
@@ -495,31 +483,43 @@
             </widget>
            </item>
            <item>
-            <widget class="QFrame" name="generalSegmentations_frame">
-             <property name="frameShape">
-              <enum>QFrame::StyledPanel</enum>
-             </property>
-             <property name="frameShadow">
-              <enum>QFrame::Raised</enum>
+            <widget class="QGroupBox" name="displayEndPoint_groupBox">
+             <property name="title">
+              <string>End Points</string>
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_7">
-              <property name="leftMargin">
-               <number>0</number>
-              </property>
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <property name="rightMargin">
-               <number>0</number>
-              </property>
-              <property name="bottomMargin">
-               <number>0</number>
-              </property>
+              <item>
+               <widget class="QCheckBox" name="displayEndPointDirections_checkBox">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="text">
+                 <string>Point directions</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="displayEndPointBestFitLines_checkBox">
+                <property name="text">
+                 <string>Best fit lines</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="displayEndPointRadius_checkBox">
+                <property name="text">
+                 <string>Radius</string>
+                </property>
+               </widget>
+              </item>
              </layout>
             </widget>
            </item>
            <item>
-            <widget class="QFrame" name="displayConnections_frame">
+            <widget class="QFrame" name="displayEndPoints_frame">
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
              </property>
@@ -539,18 +539,39 @@
               <property name="bottomMargin">
                <number>0</number>
               </property>
+             </layout>
+            </widget>
+           </item>
+           <item>
+            <widget class="QFrame" name="displayScale_frame">
+             <property name="frameShape">
+              <enum>QFrame::StyledPanel</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <layout class="QHBoxLayout" name="horizontalLayout_3">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
               <item>
-               <widget class="QCheckBox" name="displayConnectionLines_checkBox">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
+               <widget class="QLabel" name="displayRadiusScale_label">
                 <property name="text">
-                 <string>Connection lines</string>
+                 <string>Radius scale:</string>
                 </property>
                </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="displayRadiusScale_lineEdit"/>
               </item>
              </layout>
             </widget>
