--- a/mapclientplugins/segmentationstitcherstep/qt/segmentationstitcherwidget.ui
+++ b/mapclientplugins/segmentationstitcherstep/qt/segmentationstitcherwidget.ui
@@ -117,7 +117,7 @@
                <x>0</x>
                <y>0</y>
                <width>360</width>
-               <height>292</height>
+               <height>226</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -196,24 +196,68 @@
                    </layout>
                   </widget>
                  </item>
-                 <item>
-                  <widget class="QGroupBox" name="segmentConnections_groupBox">
-                   <property name="title">
-                    <string>Connections:</string>
-                   </property>
-                   <layout class="QFormLayout" name="formLayout_3">
-                    <item row="0" column="0" colspan="2">
-                     <widget class="QListWidget" name="segmentConnections_listWidget"/>
-                    </item>
-                   </layout>
-                  </widget>
-                 </item>
                 </layout>
                </widget>
               </item>
              </layout>
             </widget>
            </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="connections_groupBox">
+         <property name="title">
+          <string>Connections:</string>
+         </property>
+         <layout class="QFormLayout" name="formLayout_3">
+          <item row="0" column="0">
+           <widget class="QFrame" name="connectionsControls_frame">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="frameShape">
+             <enum>QFrame::StyledPanel</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout_11">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="QPushButton" name="conntectionsNew_pushButton">
+               <property name="text">
+                <string>New...</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="connectionsDelete_pushButton">
+               <property name="text">
+                <string>Delete...</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="2">
+           <widget class="QListWidget" name="connections_listWidget"/>
           </item>
          </layout>
         </widget>
@@ -255,13 +299,6 @@
               <property name="bottomMargin">
                <number>0</number>
               </property>
-              <item>
-               <widget class="QCheckBox" name="displayAxes_checkBox">
-                <property name="text">
-                 <string>Axes</string>
-                </property>
-               </widget>
-              </item>
              </layout>
             </widget>
            </item>
@@ -286,17 +323,24 @@
               <property name="bottomMargin">
                <number>0</number>
               </property>
-              <item row="3" column="0">
+              <item row="3" column="2">
+               <widget class="QCheckBox" name="displayMarkerNames_checkBox">
+                <property name="text">
+                 <string>Marker names</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
                <widget class="QCheckBox" name="displayMarkerPoints_checkBox">
                 <property name="text">
                  <string>Marker points</string>
                 </property>
                </widget>
               </item>
-              <item row="3" column="1">
-               <widget class="QCheckBox" name="displayMarkerNames_checkBox">
+              <item row="3" column="0">
+               <widget class="QCheckBox" name="displayAxes_checkBox">
                 <property name="text">
-                 <string>Marker names</string>
+                 <string>Axes</string>
                 </property>
                </widget>
               </item>
