--- a/mapclientplugins/segmentationstitcherstep/qt/segmentationstitcherwidget.ui
+++ b/mapclientplugins/segmentationstitcherstep/qt/segmentationstitcherwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1137</width>
-    <height>921</height>
+    <height>878</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -116,8 +116,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>360</width>
-               <height>226</height>
+               <width>343</width>
+               <height>92</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -166,13 +166,6 @@
                     <property name="fieldGrowthPolicy">
                      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
                     </property>
-                    <item row="0" column="1">
-                     <widget class="QPushButton" name="segmentTransformationCalculate_pushButton">
-                      <property name="text">
-                       <string>Calculate...</string>
-                      </property>
-                     </widget>
-                    </item>
                     <item row="1" column="0">
                      <widget class="QLabel" name="segmentRotation_label">
                       <property name="text">
@@ -258,6 +251,13 @@
           </item>
           <item row="1" column="0" colspan="2">
            <widget class="QListWidget" name="connections_listWidget"/>
+          </item>
+          <item row="0" column="1">
+           <widget class="QPushButton" name="connectionsOptimiseTransformation_pushButton">
+            <property name="text">
+             <string>Optimise Transformation...</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
